force-app/main/default/objects/Survey__c/fields/Account_Email_for_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Account_Email_for_Opportunity__c</fullName>
    <label>Account Email for Opportunity</label>
    <type>Email</type>
</CustomField>