force-app/main/default/objects/Survey__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Salutation) +&apos; &apos;+Opportunity__r.Account.FirstName +&apos; &apos;+Opportunity__r.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>