force-app/main/default/objects/Survey__c/fields/Account_Name_for_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_for_Opportunity__c</fullName>
    <label>Account Name for Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>