force-app/main/default/objects/Survey__c/fields/Account_Phone_for_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_for_Opportunity__c</fullName>
    <label>Account Phone for Opportunity</label>
    <type>Phone</type>
</CustomField>