force-app/main/default/objects/Survey__c/fields/Ageing__c.field-meta.xml
<CustomField>
    <fullName>Ageing__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>