force-app/main/default/objects/Survey__c/fields/Booking_Email_for_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Booking_Email_for_Opportunity__c</fullName>
    <label>Booking Email for Opportunity</label>
    <type>Email</type>
</CustomField>