force-app/main/default/objects/Survey__c/fields/Booking_Name_For_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Booking_Name_For_Opportunity__c</fullName>
    <label>Booking Name For Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>