force-app/main/default/objects/Survey__c/fields/Booking_Phone_for_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Booking_Phone_for_Opportunity__c</fullName>
    <label>Booking Phone for Opportunity</label>
    <type>Phone</type>
</CustomField>