force-app/main/default/objects/Survey__c/fields/Booking_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Project_Name__c</fullName>
    <label>Booking Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>