force-app/main/default/objects/Survey__c/fields/Case_Closure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Closure_Date_Time__c</fullName>
    <label>Case Closure Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>