force-app/main/default/objects/Survey__c/fields/Case_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Date_Time__c</fullName>
    <label>Case Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>