force-app/main/default/objects/Survey__c/fields/Count_of_No__c.field-meta.xml
<CustomField>
    <fullName>Count_of_No__c</fullName>
    <label>Count of No</label>
    <summaryFilterItems>
        <field>Survey_Questions__c.Answer_Yes_No__c</field>
        <operation>equals</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Questions__c.Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>