force-app/main/default/objects/Survey__c/fields/Created_Date_Time_IST__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time_IST__c</fullName>
    <formula>IF(
OR(
VALUE( MID( TEXT (DATETIMEVALUE (Case_Created_Date_Time__c + (5.5/24))), 12, 2 ) ) = 0,
VALUE( MID( TEXT (DATETIMEVALUE (Case_Created_Date_Time__c + (5.5/24))), 12, 2 ) ) = 12
),
&quot;12&quot;,
TEXT( VALUE( MID( TEXT (DATETIMEVALUE (Case_Created_Date_Time__c+ (5.5/24))), 12, 2 ) )
-
IF(
VALUE( MID( TEXT (DATETIMEVALUE (Case_Created_Date_Time__c + (5.5/24))), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp; &quot;:&quot; &amp;
MID( TEXT (DATETIMEVALUE (Case_Created_Date_Time__c + (5.5/24))), 15, 2 )
&amp; &quot;:&quot; &amp;
MID( TEXT (DATETIMEVALUE (Case_Created_Date_Time__c + (5.5/24))), 18, 2 )
&amp; &quot; &quot; &amp;
IF(
VALUE( MID( TEXT (DATETIMEVALUE (Case_Created_Date_Time__c + (5.5/24))), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Time (IST)</label>
    <type>Text</type>
</CustomField>