force-app/main/default/objects/Survey__c/fields/Email_on_Survey__c.field-meta.xml
<CustomField>
    <fullName>Email_on_Survey__c</fullName>
    <label>Email on Survey</label>
    <type>Email</type>
</CustomField>