force-app/main/default/objects/Survey__c/fields/First_Date_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_Visit__c</fullName>
    <formula>Opportunity__r.First_Site_Visit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Date Of Visit</label>
    <type>Date</type>
</CustomField>