force-app/main/default/objects/Survey__c/fields/Internal_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Internal_Feedback__c</fullName>
    <label>Internal Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>