force-app/main/default/objects/Survey__c/fields/IsSubmitted__c.field-meta.xml
<CustomField>
    <fullName>IsSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSubmitted</label>
    <type>Checkbox</type>
</CustomField>