force-app/main/default/objects/Survey__c/fields/Sales_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Phone__c</fullName>
    <label>Sales Manager Phone</label>
    <type>Phone</type>
</CustomField>