force-app/main/default/objects/Survey__c/fields/SM_From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>SM_From_Opportunity__c</fullName>
    <formula>TEXT(Opportunity__r.RW_Sales_Associate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SM From Opportunity</label>
    <type>Text</type>
</CustomField>