force-app/main/default/objects/Survey__c/fields/Survey_For_Activity__c.field-meta.xml
<CustomField>
    <fullName>Survey_For_Activity__c</fullName>
    <label>Survey For Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Random Booking</fullName>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
            <value>
                <fullName>Possession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>