force-app/main/default/objects/Survey__c/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <label>Survey Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>