force-app/main/default/objects/Survey__c/fields/Survey_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_SMS_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey SMS Sent</label>
    <type>Checkbox</type>
</CustomField>