force-app/main/default/objects/Survey__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <label>Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>