force-app/main/default/objects/Survey__c/fields/Total_of_the_Answer_fields__c.field-meta.xml
<CustomField>
    <fullName>Total_of_the_Answer_fields__c</fullName>
    <label>Total of the Answer fields</label>
    <summaryFilterItems>
        <field>Survey_Questions__c.Answer_Picklist__c</field>
        <operation>equals</operation>
        <value>1, 2, 3, 4, 5</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Questions__c.Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>