force-app/main/default/objects/Survey__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <label>Total Rating</label>
    <summarizedField>Survey_Questions__c.Rating_in_Number__c</summarizedField>
    <summaryFilterItems>
        <field>Survey_Questions__c.Answer_Picklist__c</field>
        <operation>equals</operation>
        <value>1, 2, 3, 4, 5</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Questions__c.Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>