force-app/main/default/objects/Survey__c/recordTypes/Booking_Survey.recordType-meta.xml
<RecordType>
    <fullName>Booking_Survey</fullName>
    <active>true</active>
    <label>Booking Survey</label>
</RecordType>