force-app/main/default/objects/Survey__c/recordTypes/Possession_Survey.recordType-meta.xml
<RecordType>
    <fullName>Possession_Survey</fullName>
    <active>true</active>
    <label>Possession Survey</label>
</RecordType>