force-app/main/default/objects/Survey__c/recordTypes/Site_Visit_Survey.recordType-meta.xml
<RecordType>
    <fullName>Site_Visit_Survey</fullName>
    <active>true</active>
    <label>Site Visit Survey</label>
</RecordType>